# tabroomgetroundswithwinner

./: bruh.xlsx  main.py  ncx.xlsx  nld.xlsx  npf.xlsx  pyproject.toml  vcx.xlsx  vld.xlsx  vpf.xlsx
